--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css");
-@import './assets/colors.scss';
-@import './assets/global.scss';
+body {
+  background-color: azure;
+}
+/*# sourceMappingURL=styles.css.map */
