--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,9 @@
         <div class="ui grid padded">
             <div class="two column stackable row">
                 <div class="four wide tablet three wide computer column">
-                    <img class="ui large middle-aligned rounded image" src="../../assets//images/18636091.png">
+                    <img class="ui large middle-aligned rounded image" src="/assets/images/18636091.png">
                     <div class="ui hidden divider"></div>
-                    <a href="../../assets/files/CV.pdf">
+                    <a href="/assets/files/CV.pdf">
                     <button class="ui fluid primary button">
                         Get my CV
                     </button>
@@ -69,6 +69,11 @@
                         HTML5 & CSS
                     </div>
                 </div>
+            <div class="item">
+                <div class="middle aligned content">
+                    PHP
+                </div>
+            </div>
                 <div class="item">
                     <div class="middle aligned content">
                         Javascript
