Finished projects section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -65,10 +65,10 @@
                 <h5 class="ui header">Web development</h5>
                 <div class="ui bulleted list">
                     <div class="item">
-                    <div class="middle aligned content">
-                        HTML5 & CSS
+                        <div class="middle aligned content">
+                            HTML5 & CSS
+                        </div>
                     </div>
-                </div>
             <div class="item">
                 <div class="middle aligned content">
                     PHP
@@ -86,22 +86,22 @@
                 </div>
                 <div class="item">
                     <div class="middle aligned content">
-                        NODE JS
+                        Node.js
                     </div>
                 </div>
                 <div class="item">
                     <div class="middle aligned content">
-                        ANGULAR
+                        Angular
                     </div>
                 </div>
                 <div class="item">
                     <div class="middle aligned content">
-                        VUE.JS
+                        Vue.js
                     </div>
                 </div>
                 <div class="item">
                     <div class="middle aligned content">
-                        .NET CORE
+                        .NET core
                     </div>
                 </div>
             </div>
@@ -131,22 +131,22 @@
                 <div class="ui bulleted list">
                     <div class="item">
                         <div class="middle aligned content">
-                            DIGITAL DESING(WEBSITE, MOBILE DESIGN, APP DESIGN)
+                            Digital design(website, mobile and app desing)
                         </div>
                     </div>
                     <div class="item">
                         <div class="middle aligned content">
-                            PRINT DESIGN
+                            Print desing
                         </div>
                     </div>
                     <div class="item">
                         <div class="middle aligned content">
-                            WIREFRAME DESIGN
+                            Wireframing
                         </div>
                     </div>
                     <div class="item">
                         <div class="middle aligned content">
-                            UX ANALYSIS AND UX DRIVEN DESIGN
+                            UX analisys and UX driven desing
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="item">
                     <div class="middle aligned content">
-                        Git 
+                        VCS,Git 
                     </div>
                 </div>
             </div>
