--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,5 +1,5 @@
 <div class="ui items divided">
-<div class="item" *ngFor="let project of proj">
+<div class="item" *ngFor="let project of projects">
     <app-project-item [project]="project"></app-project-item>
 </div>
 </div>
