--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,9 @@
         <div class="ui grid padded">
             <div class="two column stackable row">
                 <div class="four wide tablet three wide computer column">
-                    <img class="ui large middle-aligned rounded image" src="/assets/images/18636091.png">
+                    <img class="ui large middle-aligned rounded image" src="./assets/images/18636091.png">
                     <div class="ui hidden divider"></div>
-                    <a href="/assets/files/CV.pdf">
+                    <a href="./assets/files/CV.pdf">
                     <button class="ui fluid primary button">
                         Get my CV
                     </button>
@@ -53,9 +53,15 @@
                             </div>
                         </div>
                     <div class="ui divider"></div>
-                        <p>Suspendisse sed vehicula orci. Maecenas ut purus nunc. Nulla et mattis sem. Sed lacinia turpis quis ipsum viverra, ut
-                        volutpat dolor vestibulum. Morbi quis tempor felis, ut volutpat mi. Pellentesque varius lobortis dictum. Vestibulum
-                        vitae tortor vitae ipsum varius egestas.</p>
+                        <p>I'm ready to learn, explore and study new technologies and methods that 
+                            enable the creation of a diverse set of software solutions. Get in touch with me
+                        and let's develop something interesting together.<br>
+                        My prefered type of employment is through student service or contract work (the latter i prefer more).
+                        I plan to puruse a master's degree in Ljubljana, starting this year (2019).<br>
+                        <br>
+                        Best of luck,<br>
+                        Niko
+                    </p>
                 </div>
             </div>
                     <h3 class="ui header">Skills</h3>
