Final check fix

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -53,11 +53,10 @@
                             </div>
                         </div>
                     <div class="ui divider"></div>
-                        <p>I'm ready to learn, explore and study new technologies and methods that 
-                            enable the creation of a diverse set of software solutions. Get in touch with me
-                        and let's develop something interesting together.<br>
-                        My prefered type of employment is through student service or contract work (the latter i prefer more).
-                        I plan to puruse a master's degree in Ljubljana, starting this year (2019).<br>
+                        <p>I'm ready to learn, explore and study new technologies and methods that enable the creation of a diverse set of software
+                        solutions. Get in touch with me and let us develop something interesting together.<br>
+                        My preferred type of employment is through student service or contract work (the latter i prefer more). I plan to purse
+                        a master's degree in Ljubljana, starting this year (2019).<br>
                         <br>
                         Best of luck,<br>
                         Niko
