Added entries to list

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -63,11 +63,11 @@
                     </p>
                 </div>
             </div>
-                    <h3 class="ui header">Skills</h3>
+            <h3 class="ui header">Skills</h3>
         </div>
-        <div class="ui grid stackable padded six column">
+        <div class="ui grid stackable padded five column">
             <div class="column wide">
-                <h5 class="ui header">Web development</h5>
+                <h5 class="ui header">Web development:</h5>
                 <div class="ui bulleted list">
                     <div class="item">
                         <div class="middle aligned content">
@@ -112,7 +112,7 @@
             </div>
         </div>
             <div class="column wide">
-                <h5 class="ui header">Mobile development</h5>
+                <h5 class="ui header">Mobile development:</h5>
                 <div class="ui bulleted list">
                     <div class="item">
                         <div class="middle aligned content">
@@ -131,8 +131,33 @@
                     </div>
                 </div>
             </div>
+        <div class="column wide">
+            <h5 class="ui header">Database desing & use:</h5>
+            <div class="ui bulleted list">
+                <div class="item">
+                    <div class="middle aligned content">
+                        Relational database desing
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="middle aligned content">
+                        MYSQL
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="middle aligned content">
+                        MSSQL
+                    </div>
+                </div>
+            <div class="item">
+                <div class="middle aligned content">
+                    MONGODB
+                </div>
+            </div>
+            </div>
+        </div>
             <div class="column wide">
-                <h5 class="ui header">UX&UI DESING</h5>
+                <h5 class="ui header">UX&UI desing:</h5>
                 <div class="ui bulleted list">
                     <div class="item">
                         <div class="middle aligned content">
@@ -157,7 +182,7 @@
                 </div>
             </div>
         <div class="column wide">
-            <h5 class="ui header">Other</h5>
+            <h5 class="ui header">Other:</h5>
             <div class="ui bulleted list">
                 <div class="item">
                     <div class="middle aligned content">
@@ -174,6 +199,21 @@
                         VCS,Git 
                     </div>
                 </div>
+                <div class="item">
+                    <div class="middle aligned content">
+                        VCS,Git, Sourcetree
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="middle aligned content">
+                        Terminal(zsh, bash)
+                    </div>
+                </div>
+            <div class="item">
+                <div class="middle aligned content">
+                    Use of different operating systems (Linux, OSX and Windows).
+                </div>
+            </div>
             </div>
         </div>
     </div>
