Added cookie and data usage modals

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
   <a class="item" routerLink="/projects" routerLinkActive="active">Projects</a>
   </div>
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
 </div>
