Added lazy load projecti images

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,14 +18,14 @@
                                 <span><b>Age:</b> 24 👨</span>
                             </div>
                             <div class="item">
-                                <span><b>Education:</b>BSc. Administrative computer systems 📖</span>
+                                <span><b>Education:</b> BSc. Administrative computer systems 📖</span>
                             </div>
                             <div class="item">
                                 <span><b>Location of residency:</b> Ljubljana 🏠</span>
                             </div>
                         </div>
                         <div class="ui grid">
-                            <div class="three column stackable row">
+                            <div class="four column stackable row">
                                 <div class="ui column">
                                 <a href="https://github.com/NikoDovidija">
                                 <button class="ui basic fluid button">
@@ -50,12 +50,20 @@
                                 </button>
                                 </a>
                                 </div>
+                                <div class="ui column">
+                                    <a href="https://drive.google.com/drive/folders/1Rv5GRKlnGITJX3PfCpXoA48ufaDQig6r?usp=sharing">
+                                        <button class="ui basic blue fluid button">
+                                            <i class="pencil alternate"></i>
+                                            My design work
+                                        </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     <div class="ui divider"></div>
                         <p>I'm ready to learn, explore and study new technologies and methods that enable the creation of a diverse set of software
                         solutions. Get in touch with me and let us develop something interesting together.<br>
-                        My preferred type of employment is through student service or contract work (the latter i prefer more). I plan to purse
+                        My preferred type of employment is through student service or contract work - projects (the latter i prefer more). I plan to purse
                         a master's degree in Ljubljana, starting this year (2019).<br>
                         <br>
                         Best of luck,<br>
@@ -76,7 +84,7 @@
                     </div>
             <div class="item">
                 <div class="middle aligned content">
-                    PHP
+                    PHP, Wordpress, Laravel
                 </div>
             </div>
                 <div class="item">
@@ -126,7 +134,7 @@
                     </div>
                     <div class="item">
                         <div class="middle aligned content">
-                            Swift
+                            Swift 3
                         </div>
                     </div>
                 </div>
@@ -201,7 +209,7 @@
                 </div>
                 <div class="item">
                     <div class="middle aligned content">
-                        Terminal(zsh, bash)
+                        Terminal (zsh, bash)
                     </div>
                 </div>
             <div class="item">
